--- a/bio/contactme/contactme.html
+++ b/bio/contactme/contactme.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,25 +11,35 @@
 </head>
 <body>
 
+  <nav  style="background-color: rgba(253, 253, 253, 0);" class="navbar navbar-expand-lg navbar-light">
+    <p style="color: rgb(129, 122, 96); font-size: large;" title="Amir Ashkan Salehian Dardashti">AASD</p>
 
-        <nav  style="background-color: rgba(253, 253, 253, 0);" class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="../home/index.html"><p style="color: rgb(170, 170, 170);">Home</p></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+
+        <button style="background-color: rgb(170, 170, 170);" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+
               <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="../porfolio/porfolio.html"><p style="color:rgb(170, 170, 170);">Porfolio</p><span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="../aboutme/aboutme.html"><p style="color:rgb(170, 170, 170);">About.Me</p><span class="sr-only">(current)</span></a>
+
+                  <li class="nav-item active">
+                    <a class="nav-link" href="../home/home.html"><p style="color:rgb(170, 170, 170);">Home</p><span class="sr-only">(current)</span></a>
                   </li>
+
+                  <li class="nav-item active">
+                    <a class="nav-link" href="../portfolio/portfolio.html"><p style="color:rgb(170, 170, 170);">Porfolio</p><span class="sr-only">(current)</span></a>
+                  </li>
+
+                  <li class="nav-item active">
+                      <a class="nav-link" href="../aboutme/aboutme.html"><p style="color:rgb(170, 170, 170);">About.Me</p><span class="sr-only">(current)</span></a>
+                  </li>
+
               </ul>
-            </div>
-          </nav>
 
+        </div>
 
+  </nav>
 
 
         <div class="cotainer">
