--- a/bio/portfolio/portfolio.html
+++ b/bio/portfolio/portfolio.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet"  type="text/css"  href="Porfolio.css">
+  <link rel="stylesheet"  type="text/css"  href="Portfolio.css">
   <title>AASD</title>
 </head>
 
@@ -14,27 +14,35 @@
 <body>
 
 
+  <nav  style="background-color: rgba(253, 253, 253, 0);" class="navbar navbar-expand-lg navbar-light">
+    <p style="color: rgb(129, 122, 96); font-size: large;" title="Amir Ashkan Salehian Dardashti">AASD</p>
 
 
-
-    <nav  style="background-color: rgba(253, 253, 253, 0);" class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" href="../home/index.html"><p style="color: rgb(170, 170, 170);">Home</p></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button style="background-color: rgb(170, 170, 170);" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="../aboutme/aboutme.html"><p style="color:rgb(170, 170, 170);">About.Me</p><span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="../contactme/contactme.html"><p style="color:rgb(170, 170, 170);">Contact.Me</p><span class="sr-only">(current)</span></a>
-              </li>
-          </ul>
-        </div>
-      </nav>
 
+              <ul class="navbar-nav">
+
+                  <li class="nav-item active">
+                    <a class="nav-link" href="../home/home.html"><p style="color:rgb(170, 170, 170);">Home</p><span class="sr-only">(current)</span></a>
+                  </li>
+
+                  <li class="nav-item active">
+                    <a class="nav-link" href="../aboutme/aboutme.html"><p style="color:rgb(170, 170, 170);">About.Me</p><span class="sr-only">(current)</span></a>
+                  </li>
+
+                  <li class="nav-item active">
+                      <a class="nav-link" href="../contactme/contactme.html"><p style="color:rgb(170, 170, 170);">Contact.Me</p><span class="sr-only">(current)</span></a>
+                  </li>
+
+              </ul>
+
+        </div>
+
+  </nav>
 
 
       <div class="container">
