--- a/bio/aboutme/aboutme.html
+++ b/bio/aboutme/aboutme.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet"  type="text/css"  href="aboutme.css">
@@ -42,137 +43,224 @@
 
 
 
-    <div class="cotainer">
+<div class="boxfade">
+  <div class="container-fluid">
 
-
-        <div class="boxfade">
-
-          <div class="row">
-
-            <div class="column">
-              <p>Classical physics, the description of physics
-                that existed before the 
-                theory of relativity and quantum mechanics, 
-                describes many aspects of 
-                nature at an ordinary 
-                (macroscopic) scale,
-                while quantum mechanics explains the aspects of nature at small (atomic and
-                  subatomic) scales, for which classical 
-                mechanics is insufficient.</p>
-            </div>
-
-            <div class="column">
-              <p>Classical physics, the description of physics
-                that existed before the 
-              theory of relativity and quantum mechanics, 
-              describes many aspects of 
-              nature at an ordinary 
-              (macroscopic) scale,
-                while quantum mechanics explains the aspects of nature at small (atomic and
-                subatomic) scales, for which classical 
-              mechanics is insufficient.</p>
-            </div>
-
-            <div class="column">
-              <p>Classical physics, the description of physics
-                that existed before the 
-              theory of relativity and quantum mechanics, 
-              describes many aspects of 
-              nature at an ordinary 
-              (macroscopic) scale,
-                while quantum mechanics explains the aspects of nature at small (atomic and
-                subatomic) scales, for which classical 
-              mechanics is insufficient.</p>
-            </div>
-
-        </div>
-
-
-        <div class="row">
-
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                  theory of relativity and quantum mechanics, 
-                  describes many aspects of 
-                  nature at an ordinary 
-                  (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                    subatomic) scales, for which classical 
-                  mechanics is insufficient.</p>
-              </div>
-
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                theory of relativity and quantum mechanics, 
-                describes many aspects of 
-                nature at an ordinary 
-                (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                  subatomic) scales, for which classical 
-                mechanics is insufficient.</p>
-              </div>
-
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                theory of relativity and quantum mechanics, 
-                describes many aspects of 
-                nature at an ordinary 
-                (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                  subatomic) scales, for which classical 
-                mechanics is insufficient.</p>
-              </div>
-
-        </div>
-
-
-        <div class="row">
-
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                  theory of relativity and quantum mechanics, 
-                  describes many aspects of 
-                  nature at an ordinary 
-                  (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                    subatomic) scales, for which classical 
-                  mechanics is insufficient.</p>
-              </div>
-
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                theory of relativity and quantum mechanics, 
-                describes many aspects of 
-                nature at an ordinary 
-                (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                  subatomic) scales, for which classical 
-                mechanics is insufficient.</p>
-              </div>
-
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                theory of relativity and quantum mechanics, 
-                describes many aspects of 
-                nature at an ordinary 
-                (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                  subatomic) scales, for which classical 
-                mechanics is insufficient.</p>
-              </div>
-
-            </div>
-
-
-
-        </div>
+    <div class="row">
+      <div class="img1 col-md-4 col-sm-6 col-xs-12"></div>
+      <div class=" col-md-4 col-sm-6 col-xs-12">
+        <p class="p1" >
+          ashiashahsaihsaih
+        ahsaihsiahsiahs
+        ahsjahsuiahsuhas
+        ahsauhsiahsioahs
+        sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+        pFmC26EwAOH8WgZl5MYYxFfc
+        jsakjskajsasaj
+        ajskajskajksaj
+        ajskajskasjkajsakj
+        ashuwhjsnnunws
+        sjwnsjwnjswnnjnsjw jwjbwjsnb
+        sjwnsjwns       ahsaihsiahsiahs
+        ahsjahsuiahsuhas
+        ahsauhsiahsioahs
+        sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+        pFmC26EwAOH8WgZl5MYYxFfc
+        jsakjskajsasaj
+        ajskajskajksaj
+        ajskajskasjkajsakj
+        ashuwhjsnnunws
+        sjwnsjwnjswnnjnsjw jwjbwjsnb
+        sjwnsjwns
+      </p>
     </div>
+    <div class="col-md-4 col-sm-6 col-xs-12">
+      <p class="p1" >
+      ashiashahsaihsaih
+      ahsaihsiahsiahs
+      ahsjahsuiahsuhas
+      ahsauhsiahsioahs
+      sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+      pFmC26EwAOH8WgZl5MYYxFfc
+      jsakjskajsasaj
+      ajskajskajksaj
+      ajskajskasjkajsakj
+      ashuwhjsnnunws
+      sjwnsjwnjswnnjnsjw jwjbwjsnb
+      sjwnsjwns
+    </p>
+    </div>
+    <div class="w-100"></div>
+  </div>
+
+<!--top one first pic -->
+
+  </br></br></br></br>
+
+
+<!--down one second pic-->
+
+
+<div class="row">
+  <div class="img2 col-md-4 col-sm-6 col-xs-12"></div>
+  <div class=" col-md-4 col-sm-6 col-xs-12">
+    <p class="p1" >
+      ashiashahsaihsaih
+    ahsaihsiahsiahs
+    ahsjahsuiahsuhas
+    ahsauhsiahsioahs
+    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+    pFmC26EwAOH8WgZl5MYYxFfc
+    jsakjskajsasaj
+    ajskajskajksaj
+    ajskajskasjkajsakj
+    ashuwhjsnnunws
+    sjwnsjwnjswnnjnsjw jwjbwjsnb
+    sjwnsjwns       ahsaihsiahsiahs
+    ahsjahsuiahsuhas
+    ahsauhsiahsioahs
+    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+    pFmC26EwAOH8WgZl5MYYxFfc
+    jsakjskajsasaj
+    ajskajskajksaj
+    ajskajskasjkajsakj
+    ashuwhjsnnunws
+    sjwnsjwnjswnnjnsjw jwjbwjsnb
+    sjwnsjwns
+  </p>
+</div>
+<div class="col-md-4 col-sm-6 col-xs-12">
+  <p class="p1" >
+  ashiashahsaihsaih
+  ahsaihsiahsiahs
+  ahsjahsuiahsuhas
+  ahsauhsiahsioahs
+  sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+  pFmC26EwAOH8WgZl5MYYxFfc
+  jsakjskajsasaj
+  ajskajskajksaj
+  ajskajskasjkajsakj
+  ashuwhjsnnunws
+  sjwnsjwnjswnnjnsjw jwjbwjsnb
+  sjwnsjwns
+</p>
+</div>
+<div class="w-100"></div>
+</div>
+
+</br></br></br></br>
+
+  <!--down one third pic-->
+
+
+<div class="row">
+  <div class="img3 col-md-4 col-sm-6 col-xs-12"></div>
+  <div class=" col-md-4 col-sm-6 col-xs-12">
+    <p class="p2" >
+      ashiashahsaihsaih
+    ahsaihsiahsiahs
+    ahsjahsuiahsuhas
+    ahsauhsiahsioahs
+    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+    pFmC26EwAOH8WgZl5MYYxFfc
+    jsakjskajsasaj
+    ajskajskajksaj
+    ajskajskasjkajsakj
+    ashuwhjsnnunws
+    sjwnsjwnjswnnjnsjw jwjbwjsnb
+    sjwnsjwns       ahsaihsiahsiahs
+    ahsjahsuiahsuhas
+    ahsauhsiahsioahs
+    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+    pFmC26EwAOH8WgZl5MYYxFfc
+    jsakjskajsasaj
+    ajskajskajksaj
+    ajskajskasjkajsakj
+    ashuwhjsnnunws
+    sjwnsjwnjswnnjnsjw jwjbwjsnb
+    sjwnsjwns
+  </p>
+</div>
+<div class="col-md-4 col-sm-6 col-xs-12">
+  <p class="p3" >
+  ashiashahsaihsaih
+  ahsaihsiahsiahs
+  ahsjahsuiahsuhas
+  ahsauhsiahsioahs
+  sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+  pFmC26EwAOH8WgZl5MYYxFfc
+  jsakjskajsasaj
+  ajskajskajksaj
+  ajskajskasjkajsakj
+  ashuwhjsnnunws
+  sjwnsjwnjswnnjnsjw jwjbwjsnb
+  sjwnsjwns
+</p>
+</div>
+<div class="w-100"></div>
+</div>
+
+</br></br></br></br>
+
+    <!--down one forth pic-->
+
+
+<div class="row">
+  <div class="img4 col-md-4 col-sm-6 col-xs-12"></div>
+  <div class=" col-md-4 col-sm-6 col-xs-12">
+    <p class="p4" >
+      ashiashahsaihsaih
+    ahsaihsiahsiahs
+    ahsjahsuiahsuhas
+    ahsauhsiahsioahs
+    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+    pFmC26EwAOH8WgZl5MYYxFfc
+    jsakjskajsasaj
+    ajskajskajksaj
+    ajskajskasjkajsakj
+    ashuwhjsnnunws
+    sjwnsjwnjswnnjnsjw jwjbwjsnb
+    sjwnsjwns       ahsaihsiahsiahs
+    ahsjahsuiahsuhas
+    ahsauhsiahsioahs
+    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+    pFmC26EwAOH8WgZl5MYYxFfc
+    jsakjskajsasaj
+    ajskajskajksaj
+    ajskajskasjkajsakj
+    ashuwhjsnnunws
+    sjwnsjwnjswnnjnsjw jwjbwjsnb
+    sjwnsjwns
+  </p>
+</div>
+<div class="col-md-4 col-sm-6 col-xs-12">
+  <p class="p5" >
+  ashiashahsaihsaih
+  ahsaihsiahsiahs
+  ahsjahsuiahsuhas
+  ahsauhsiahsioahs
+  sha384-9aIt2nRpC12Uk9gS9baDl411NQA
+  pFmC26EwAOH8WgZl5MYYxFfc
+  jsakjskajsasaj
+  ajskajskajksaj
+  ajskajskasjkajsakj
+  ashuwhjsnnunws
+  sjwnsjwnjswnnjnsjw jwjbwjsnb
+  sjwnsjwns
+</p>
+</div>
+<div class="w-100"></div>
+</div>
+
+
+
+  </div>
+</div>
+
+
+
+
 
 </body>
 </html>
+
