--- a/bio/portfolio/portfolio.html
+++ b/bio/portfolio/portfolio.html
@@ -45,134 +45,32 @@
   </nav>
 
 
-      <div class="container">
-
-        <div class="boxfade">
-
-          <div class="row">
-
-            <div class="column">
-              <p>Classical physics, the description of physics
-                that existed before the 
-                theory of relativity and quantum mechanics, 
-                describes many aspects of 
-                nature at an ordinary 
-                (macroscopic) scale,
-                while quantum mechanics explains the aspects of nature at small (atomic and
-                  subatomic) scales, for which classical 
-                mechanics is insufficient.</p>
-            </div>
-
-            <div class="column">
-              <p>Classical physics, the description of physics
-                that existed before the 
-              theory of relativity and quantum mechanics, 
-              describes many aspects of 
-              nature at an ordinary 
-              (macroscopic) scale,
-                while quantum mechanics explains the aspects of nature at small (atomic and
-                subatomic) scales, for which classical 
-              mechanics is insufficient.</p>
-            </div>
-
-            <div class="column">
-              <p>Classical physics, the description of physics
-                that existed before the 
-              theory of relativity and quantum mechanics, 
-              describes many aspects of 
-              nature at an ordinary 
-              (macroscopic) scale,
-                while quantum mechanics explains the aspects of nature at small (atomic and
-                subatomic) scales, for which classical 
-              mechanics is insufficient.</p>
-            </div>
-
-        </div>
+  <div class="container-fluid">
 
 
-        <div class="row">
+    <div class="boxfade">
 
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                  theory of relativity and quantum mechanics, 
-                  describes many aspects of 
-                  nature at an ordinary 
-                  (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                    subatomic) scales, for which classical 
-                  mechanics is insufficient.</p>
+            <div class="row">
+
+                    <div class="col-md-4 col-sm-6 col-xs-12 btn-group" role="group" aria-label="Basic example">
+                          <button type="button" class="btn btn-secondary"><p class="p1">Code Refactor</p></button>
+                    </div>
+
+                    <div class="col-md-4 col-sm-6 col-xs-12  btn-group" role="group" aria-label="Basic example">
+                    <button style="background-color: rgb(46, 127, 133);" type="button" class="btn btn-secondary"><a class="link1 " href="portfolio.html"><p>PORTFOLIO</p></a></button>
+                    </div>
+
+                    <div class="col-md-4 col-sm-6 col-xs-12 btn-group" role="group" aria-label="Basic example" ">
+                          <button style="background-color: rgb(191, 196, 164); border-color: rgba(0, 0, 0, 0);" type="button" class="btn btn-secondary" ><p class="p3" data-hover="Loading....">Paswoord</p></button>
+                    </div>
+
               </div>
 
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                theory of relativity and quantum mechanics, 
-                describes many aspects of 
-                nature at an ordinary 
-                (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                  subatomic) scales, for which classical 
-                mechanics is insufficient.</p>
-              </div>
-
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                theory of relativity and quantum mechanics, 
-                describes many aspects of 
-                nature at an ordinary 
-                (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                  subatomic) scales, for which classical 
-                mechanics is insufficient.</p>
-              </div>
-
-        </div>
+    </div>
 
 
-        <div class="row">
+</div>
 
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                  theory of relativity and quantum mechanics, 
-                  describes many aspects of 
-                  nature at an ordinary 
-                  (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                    subatomic) scales, for which classical 
-                  mechanics is insufficient.</p>
-              </div>
-
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                theory of relativity and quantum mechanics, 
-                describes many aspects of 
-                nature at an ordinary 
-                (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                  subatomic) scales, for which classical 
-                mechanics is insufficient.</p>
-              </div>
-
-              <div class="column">
-                <p>Classical physics, the description of physics
-                  that existed before the 
-                theory of relativity and quantum mechanics, 
-                describes many aspects of 
-                nature at an ordinary 
-                (macroscopic) scale,
-                  while quantum mechanics explains the aspects of nature at small (atomic and
-                  subatomic) scales, for which classical 
-                mechanics is insufficient.</p>
-              </div>
-
-            </div>
-        </div>
-
-      </div>
 
 
 
