--- a/bio/contactme/contactme.html
+++ b/bio/contactme/contactme.html
@@ -42,31 +42,32 @@
   </nav>
 
 
-  <div class="container-fluid">
+  <div style="padding-left: 0px; padding-right: 3px;" class="container-fluid">
 
 
-    <div class="boxfade">
+      <div class="row">
+        <div  class="col col-md col-sm col-xs">
+          <h1 >
+            Get In Touch
+          </h1>
+          <p class="p1">Please send me an Email and I will be in touch with you as soon as possible.</p>
+          </div>
+        </div>
 
-            <div class="row">
-
-                    <div class="col-md-4 col-sm-6 col-xs-12 ">
-                          <p>code refactor</p>
-                    </div>
-
-                    <div class="col-md-4 col-sm-6 col-xs-12 ">
-                          <a href="portfolio.html"><p>portfolio</p></a>
-                    </div>
-
-                    <div class="col-md-4 col-sm-6 col-xs-12 ">
-                          <p>password...</p>
-                    </div>
-
-              </div>
+        <div style="height: 2%;" class="row">
+          <div style="background-color:rgba(17, 15, 12, 0.185); flex-basis: auto; padding: left 0px;" class="col col-md col-sm col-xs">
+             <a class="alinks1" href="mailto:amirashsd@yahoo.com">Send me an Email</a>
+         </div>
+          <div style="background-color:rgba(17, 15, 12, 0.185);" class="col col-md col-sm col-xs">
+          <a class="alinks1"  href="tel:+1-816-***-****">Call me</a>
+          </div>
+        </div>
 
     </div>
 
+  </div>
 
-</div>
 
 </body>
 </html>
+
