--- a/bio/home/home.html
+++ b/bio/home/home.html
@@ -13,7 +13,7 @@
 
 <body>
 
-      <div class="container">
+      <div class="container-fluid">
 
 
 
@@ -25,20 +25,20 @@
 
 
 
-                                    <div class="column1">
+                                    <div class="column1 col col-md col-sm col-xs">
 
-                                          <div class="name">Amir Ashkan S.D</div>
+                                          <div class="name">Amir Ashkan S.D.</div>
 
                                     </div>
 
 
 
-                                    <div class="column2">
+                                    <div class="column2 col col-md col-sm col-xs">
 
                                             <ul class="listam">
-                                                <li class="p"><a href="../portfolio/portfolio.html">Portfolio</a></li>
-                                                <li class="a"><a href="../aboutme/aboutme.html">About.Me</a></li>
-                                                <li class="c"><a href="../contactme/contactme.html">Contact.Me</a></li>
+                                                <li class="p"><a class="alinka" href="../portfolio/portfolio.html">Portfolio</a></li>
+                                                <li class="a"><a class="alinka" href="../aboutme/aboutme.html">About.Me</a></li>
+                                                <li class="c"><a class="alinka" href="../contactme/contactme.html">Contact.Me</a></li>
                                             </ul>
 
                                     </div>
@@ -47,25 +47,29 @@
                 </div>
 
 
+              <div class="container-fluid">
 
+                <div class="row">
 
+                      <div class="footerfade col col-md col-sm col-xs">
 
-                <div class="footerfade">
+                          <ul>
+                          <li> <a class="socialicon1 a1 a2" href="https://www.linkedin.com/feed/?trk=nav_logo" target="_blank" title="LinkedIn">L</a></li>
 
-                    <ul>
-                    <li> <a class="socialicon1 a1 a2" href="https://www.linkedin.com/feed/?trk=nav_logo" target="_blank" title="LinkedIn">L</a></li>
+                          <li><a class="socialicon2 a1 a2" href="https://app.slack.com/client/T015AR2DTQX/learning-slack" target="_blank" title="slack">s</a></li>
 
-                    <li><a class="socialicon2 a1 a2" href="ashco-group.slack.com" target="_blank" title="slack">s</a></li>
+                          <li><a class="socialicon3 a1 a2" href="https://github.com/AmirAshkan7091" target="_blank" title="GitHub">G</a></li>
 
-                    <li><a class="socialicon3 a1 a2" href="https://github.com/AmirAshkan7091" target="_blank" title="GitHub">G</a></li>
+                          <li><a class="socialicon4 a1 a2" href="https://stackoverflow.com/users/13632632/amirashkan7091?tab=profile" target="_blank" title="stackoverflow">s.o</a></li>
 
-                    <li><a class="socialicon4 a1 a2" href="https://stackoverflow.com/users/13632632/amirashkan7091?tab=profile" target="_blank" title="stackoverflow">s.o</a></li>
+                          <li><a class="socialicon5 a1 a2" href="" target="_blank" title="instagram">I</a></li>
+                          </ul>
 
-                    <li><a class="socialicon5 a1 a2" href="" target="_blank" title="instagram">i</a></li>
-                    </ul>
+                      </div>
 
-                </div>
+               </div>
 
+            </div>
 
 
       </div>
