--- a/bio/portfolio/portfolio.html
+++ b/bio/portfolio/portfolio.html
@@ -53,15 +53,22 @@
             <div class="row">
 
                     <div class="col-md-4 col-sm-6 col-xs-12 btn-group" role="group" aria-label="Basic example">
-                          <button type="button" class="btn btn-secondary"><p class="p1">Code Refactor</p></button>
+                          <button type="button" class="btn btn-secondary"><a class="link1" href="../../Develop/index.html" target="_blank"><p class="p1">Code Refactor</p></a>
+                          <p>
+                            Code Refactoring was a great experience. I learned how to fix the problems and organize the codes, also how to add more atribute when its needed.
+                          </p>
+                        </button>
                     </div>
 
                     <div class="col-md-4 col-sm-6 col-xs-12  btn-group" role="group" aria-label="Basic example">
-                    <button style="background-color: rgb(46, 127, 133);" type="button" class="btn btn-secondary"><a class="link1 " href="portfolio.html"><p>PORTFOLIO</p></a></button>
+                    <button style="background-color: rgb(46, 127, 133);" type="button" class="btn btn-secondary"><a class="link1 " href="portfolio.html" target="_blank"><p>PORTFOLIO</p></a>
+                    <p>
+                      You will find everything you want to know about me and all my projects.
+                    </p></button>
                     </div>
 
-                    <div class="col-md-4 col-sm-6 col-xs-12 btn-group" role="group" aria-label="Basic example" ">
-                          <button style="background-color: rgb(191, 196, 164); border-color: rgba(0, 0, 0, 0);" type="button" class="btn btn-secondary" ><p class="p3" data-hover="Loading....">Paswoord</p></button>
+                    <div class="col-md-4 col-sm-6 col-xs-12 btn-group" role="group" aria-label="Basic example">
+                          <button style="background-color: rgb(191, 196, 164); border-color: rgba(0, 0, 0, 0);" type="button" class="btn btn-secondary" ><p class="p3" data-hover="pending....">Pasword Generator</p></button>
                     </div>
 
               </div>
