--- a/bio/aboutme/aboutme.html
+++ b/bio/aboutme/aboutme.html
@@ -50,45 +50,13 @@
       <div class="img1 col-md-4 col-sm-6 col-xs-12"></div>
       <div class=" col-md-4 col-sm-6 col-xs-12">
         <p class="p1" >
-          ashiashahsaihsaih
-        ahsaihsiahsiahs
-        ahsjahsuiahsuhas
-        ahsauhsiahsioahs
-        sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-        pFmC26EwAOH8WgZl5MYYxFfc
-        jsakjskajsasaj
-        ajskajskajksaj
-        ajskajskasjkajsakj
-        ashuwhjsnnunws
-        sjwnsjwnjswnnjnsjw jwjbwjsnb
-        sjwnsjwns       ahsaihsiahsiahs
-        ahsjahsuiahsuhas
-        ahsauhsiahsioahs
-        sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-        pFmC26EwAOH8WgZl5MYYxFfc
-        jsakjskajsasaj
-        ajskajskajksaj
-        ajskajskasjkajsakj
-        ashuwhjsnnunws
-        sjwnsjwnjswnnjnsjw jwjbwjsnb
-        sjwnsjwns
+          My name is Amir Ashkan. I am 29 years old and I was born in Iran-Esfahan. I came from a family of four and I have a younger brother. 
       </p>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12">
       <p class="p1" >
-      ashiashahsaihsaih
-      ahsaihsiahsiahs
-      ahsjahsuiahsuhas
-      ahsauhsiahsioahs
-      sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-      pFmC26EwAOH8WgZl5MYYxFfc
-      jsakjskajsasaj
-      ajskajskajksaj
-      ajskajskasjkajsakj
-      ashuwhjsnnunws
-      sjwnsjwnjswnnjnsjw jwjbwjsnb
-      sjwnsjwns
-    </p>
+        All my immediate family are back home. I have been in the United States since 2016. I completed the Certificate in software engineering in 2014. I have always dreamed of being the best in computer field.
+      </p>
     </div>
     <div class="w-100"></div>
   </div>
@@ -105,44 +73,13 @@
   <div class="img2 col-md-4 col-sm-6 col-xs-12"></div>
   <div class=" col-md-4 col-sm-6 col-xs-12">
     <p class="p1" >
-      ashiashahsaihsaih
-    ahsaihsiahsiahs
-    ahsjahsuiahsuhas
-    ahsauhsiahsioahs
-    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-    pFmC26EwAOH8WgZl5MYYxFfc
-    jsakjskajsasaj
-    ajskajskajksaj
-    ajskajskasjkajsakj
-    ashuwhjsnnunws
-    sjwnsjwnjswnnjnsjw jwjbwjsnb
-    sjwnsjwns       ahsaihsiahsiahs
-    ahsjahsuiahsuhas
-    ahsauhsiahsioahs
-    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-    pFmC26EwAOH8WgZl5MYYxFfc
-    jsakjskajsasaj
-    ajskajskajksaj
-    ajskajskasjkajsakj
-    ashuwhjsnnunws
-    sjwnsjwnjswnnjnsjw jwjbwjsnb
-    sjwnsjwns
-  </p>
+      Esfahan is one of Iran’s cities. Esfahan is a city in central Iran, known for its Persian architecture. In the huge Naqsh-e Jahan Square is the 17th-century Imam (Shah) Mosque,
+    </p>
 </div>
 <div class="col-md-4 col-sm-6 col-xs-12">
   <p class="p1" >
-  ashiashahsaihsaih
-  ahsaihsiahsiahs
-  ahsjahsuiahsuhas
-  ahsauhsiahsioahs
-  sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-  pFmC26EwAOH8WgZl5MYYxFfc
-  jsakjskajsasaj
-  ajskajskajksaj
-  ajskajskasjkajsakj
-  ashuwhjsnnunws
-  sjwnsjwnjswnnjnsjw jwjbwjsnb
-  sjwnsjwns
+    whose dome and minarets are covered with mosaic tiles and calligraphy. Ali Qapu Palace, built for Shah Abbas and completed in the late 16th century, has a music room and a verandah overlooking the square’s fountains. Sheikh Lotfollah Mosque is known for its intricate tiling 
+    <a href="https://en.wikipedia.org/wiki/Isfahan" target="_blank">in here.</a>
 </p>
 </div>
 <div class="w-100"></div>
@@ -157,44 +94,12 @@
   <div class="img3 col-md-4 col-sm-6 col-xs-12"></div>
   <div class=" col-md-4 col-sm-6 col-xs-12">
     <p class="p2" >
-      ashiashahsaihsaih
-    ahsaihsiahsiahs
-    ahsjahsuiahsuhas
-    ahsauhsiahsioahs
-    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-    pFmC26EwAOH8WgZl5MYYxFfc
-    jsakjskajsasaj
-    ajskajskajksaj
-    ajskajskasjkajsakj
-    ashuwhjsnnunws
-    sjwnsjwnjswnnjnsjw jwjbwjsnb
-    sjwnsjwns       ahsaihsiahsiahs
-    ahsjahsuiahsuhas
-    ahsauhsiahsioahs
-    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-    pFmC26EwAOH8WgZl5MYYxFfc
-    jsakjskajsasaj
-    ajskajskajksaj
-    ajskajskasjkajsakj
-    ashuwhjsnnunws
-    sjwnsjwnjswnnjnsjw jwjbwjsnb
-    sjwnsjwns
+      I have been married to my wife of five years. We met when we were back home in 2012. 
   </p>
 </div>
 <div class="col-md-4 col-sm-6 col-xs-12">
   <p class="p3" >
-  ashiashahsaihsaih
-  ahsaihsiahsiahs
-  ahsjahsuiahsuhas
-  ahsauhsiahsioahs
-  sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-  pFmC26EwAOH8WgZl5MYYxFfc
-  jsakjskajsasaj
-  ajskajskajksaj
-  ajskajskasjkajsakj
-  ashuwhjsnnunws
-  sjwnsjwnjswnnjnsjw jwjbwjsnb
-  sjwnsjwns
+    We fell in love after been four years apart and we got marries and that was the time that I moved to the United States of America and we started a new chapter of our life. I have been working as a chipotle manager for the past four years.
 </p>
 </div>
 <div class="w-100"></div>
@@ -209,44 +114,12 @@
   <div class="img4 col-md-4 col-sm-6 col-xs-12"></div>
   <div class=" col-md-4 col-sm-6 col-xs-12">
     <p class="p4" >
-      ashiashahsaihsaih
-    ahsaihsiahsiahs
-    ahsjahsuiahsuhas
-    ahsauhsiahsioahs
-    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-    pFmC26EwAOH8WgZl5MYYxFfc
-    jsakjskajsasaj
-    ajskajskajksaj
-    ajskajskasjkajsakj
-    ashuwhjsnnunws
-    sjwnsjwnjswnnjnsjw jwjbwjsnb
-    sjwnsjwns       ahsaihsiahsiahs
-    ahsjahsuiahsuhas
-    ahsauhsiahsioahs
-    sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-    pFmC26EwAOH8WgZl5MYYxFfc
-    jsakjskajsasaj
-    ajskajskajksaj
-    ajskajskasjkajsakj
-    ashuwhjsnnunws
-    sjwnsjwnjswnnjnsjw jwjbwjsnb
-    sjwnsjwns
+      My favorite has been palying waterpolo for the past 20 years I started playing water polo when I was eight years old and I have been a professional water polo player for the last 14 years for Iran’s national team
   </p>
 </div>
 <div class="col-md-4 col-sm-6 col-xs-12">
   <p class="p5" >
-  ashiashahsaihsaih
-  ahsaihsiahsiahs
-  ahsjahsuiahsuhas
-  ahsauhsiahsioahs
-  sha384-9aIt2nRpC12Uk9gS9baDl411NQA
-  pFmC26EwAOH8WgZl5MYYxFfc
-  jsakjskajsasaj
-  ajskajskajksaj
-  ajskajskasjkajsakj
-  ashuwhjsnnunws
-  sjwnsjwnjswnnjnsjw jwjbwjsnb
-  sjwnsjwns
+    I was elected as the best player when I was 16 years old. My other hobbies Includes watching movies,  working out and traveling.
 </p>
 </div>
 <div class="w-100"></div>
