--- a/bio/contactme/contactme.html
+++ b/bio/contactme/contactme.html
@@ -45,7 +45,8 @@
   <div style="padding-left: 0px; padding-right: 3px;" class="container-fluid">
 
 
-      <div class="row">
+      <div class="row" style="  justify-content: center;
+      align-items: center;">
         <div  class="col col-md col-sm col-xs">
           <h1 >
             Get In Touch
