last-one-wedjul0818

--- a/bio/portfolio/portfolio.html
+++ b/bio/portfolio/portfolio.html
@@ -82,6 +82,9 @@
                                 <a class="link1 " href="../../password generator/password.html" target="_blank">
                                   <p class="p1">Pasword Generator</p>
                                 </a>
+                                <p>
+                                  It was very good experience using Java Script languge to build the application like Password Generator.
+                                </p>
                           </button>
                           <!--data-hover="pending...."-->
 
